--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,7 @@
+########## 
+# Dependencies
+########## 
+
 .yarn/*
 !.yarn/patches
 !.yarn/plugins
@@ -5,9 +9,16 @@
 !.yarn/sdks
 !.yarn/versions
 
-# Swap the comments on the following lines if you wish to use zero-installs
-# In that case, don't forget to run `yarn config set enableGlobalCache false`!
-# Documentation here: https://yarnpkg.com/features/caching#zero-installs
+node_modules
 
-#!.yarn/cache
-.pnp.*
+########## 
+# Turbo
+########## 
+
+.turbo
+
+########## 
+# Expo
+##########
+
+.expo
