--- a/apps/universal/package.json
+++ b/apps/universal/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@babel/plugin-proposal-export-namespace-from": "^7.18.9",
+    "@shopify/flash-list": "1.4.3",
     "expo": "~49.0.15",
     "expo-constants": "~14.4.2",
     "expo-font": "~11.4.0",
@@ -18,6 +19,7 @@
     "expo-router": "^2.0.0",
     "expo-splash-screen": "~0.20.5",
     "expo-status-bar": "~1.6.0",
+    "nativewind": "4.0.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-native": "0.72.6",
@@ -29,7 +31,9 @@
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
+    "@babel/types": "7.23.5",
     "@types/react": "^18.2.38",
+    "tailwindcss": "^3.3.5",
     "typescript": "^5.3.2"
   }
 }
