--- a/turbo.json
+++ b/turbo.json
@@ -5,6 +5,11 @@
       "dependsOn": [],
       "cache": true,
       "outputs": ["dist"]
+    },
+    "clean": {
+      "dependsOn": [],
+      "cache": false,
+      "outputs": []
     }
   }
 }
