--- a/apps/universal/package.json
+++ b/apps/universal/package.json
@@ -7,7 +7,8 @@
     "start": "expo start -c",
     "android": "expo start --android",
     "ios": "expo start --ios",
-    "web": "expo start --web"
+    "web": "expo start --web",
+    "clean": "del-cli node_modules .expo"
   },
   "dependencies": {
     "@babel/plugin-proposal-export-namespace-from": "^7.18.9",
@@ -34,6 +35,7 @@
     "@babel/core": "^7.20.0",
     "@babel/types": "7.23.5",
     "@types/react": "^18.2.38",
+    "del-cli": "^5.1.0",
     "tailwindcss": "^3.3.5",
     "typescript": "^5.3.2"
   }
